# course

./: .env  .env.test  .gitignore  main.py  pyproject.toml
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_09_05_1454-d603259d5b9b_upgrade.py  2025_09_15_1239-4335ef8e7bd8_creare_user_model.py  2025_09_15_1517-e5dd6339f49e_edit_user_model.py  2025_09_20_1055-573e075fff4e_create_table_bookings.py  2025_09_25_1216-e566c3abfc39_create_tables_facilities_roomfacilities.py  2025_09_25_1808-b6f53ab4e585_edit_name_column_in_roomfacilities.py  f053984cac72_initial_migrations.py
src/api/: __init__.py  auth.py  bookings.py  dependencies.py  facilities.py  hotels.py  images.py  rooms.py
src/core/: config.py
src/core/celery_/: celery_conf.py
src/core/db/: base_model.py
src/core/redis_/: redis_connector.py
src/core/schemas/: base_schema.py
src/exceptions/: exceptions.py
src/models/: __init__.py  bookings.py  facilities.py  hotels.py  rooms.py  user.py
src/repositories/: base_repository.py  booking_repository.py  db_expressions.py  facility_repository.py  hotel_repository.py  room_repository.py  user_repository.py
src/repositories/mappers/: mappers.py  (+1 more)
src/schemas/: __init__.py  bookings.py  facility.py  hotels.py  rooms.py  user.py
src/service/: base_service.py  bookings_service.py  facility_service.py  user_service.py
tests/: conftest.py
tests/api_tests/: test_hotels.py
tests/db_datas/: mock_rooms.json
tests/intagrations_tests/: test_auth.py
tests/parametrize_datas/: auth.py  bookings.py
tests/unit_tests/: test_auth.py
(+11 files in other folders)
